[workspace]
members = [
    # proto compiling crate
    "main",

    # 1st experiment crate
    "experiment_one",              
    "experiment_one/grpc_simple",           
    "experiment_one/loadgen_simple",       
    "experiment_one/rest_simple",

    # 2nd experiment crate
    "experiment_two",
    "experiment_two/grpc_complex",           
    "experiment_two/loadgen_complex",       
    "experiment_two/rest_complex",]


resolver = "2"

[workspace.dependencies]
# async runtime
tokio = { version = "1.48.0", features = ["full"] }

# rest dependencies
axum = { version = "0.8.7", features = ["json"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# gRPC dependencies
tonic = { version = "0.14.2", features = ["transport"] }
tonic-prost = "0.14.2"
prost = "0.14.1"
prost-types = "0.14.1"
tonic-prost-build = "0.14.2"
futures-core = "0.3.31"
async-stream = "0.3.6"