[package]
name = "grpc"
version = "0.1.0"
edition = "2024"

[dependencies]
main = { version = "0.1.0", path = "../main" }
prost = "0.14.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.14.2", features = ["transport"] }

[build-dependencies]
tonic-prost-build = "0.14.2"
