[package]
name = "loadgen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
main = { version = "0.1.0", path = "../main" }
prost = "0.14.1"
reqwest = { version = "0.12.24", features = ["json"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.14.2", features = ["transport"] }
